# agentwhisper

./: CHANGELOG.md  DESIGN.md  README.md  pyproject.toml
docs/: index.html
src/agentwhisper/: __init__.py  cli.py  config.py  daemon.py  tray.py
src/agentwhisper/desktop/: __init__.py  base.py  x11.py
src/agentwhisper/engines/: __init__.py  base.py  whisper_local.py
tests/: test_daemon.py  test_pipeline.py
